# BSUIR-course-work-semester-1

./: .clang-format  .clangd  .editorconfig  main.cpp  meson.build  readme.md
.github/workflows/: lint.yml
assets/: flowchart.drawio  ПЗ.docx
include/: grid.h  grid_location.h
include/algorithm/: a_star_search.h  dijkstra_search.h  grid_maze_generator.h
include/algorithm/maze_generator/: base_maze_generator.h  block_maze_generator.h  depth_first_search_maze_generator.h
include/algorithm/pathfinder/: a_star_search.h  base_path_finder.h  breadth_first_search.h  dijkstra_search.h
include/data_structure/: grid.h  priority_queue.h
include/graph/: grid.h  maze_generator.h
include/path_finder/: a_star_search.h  dijkstra_search.h
include/renderer/: grid_renderer.h  renderer.h
include/utility/: cmd_options.h  terminal.h  timer.h
paperwork/: flowcharts.drawio
src/: grid.cpp  grid_location.cpp  main.cpp
src/algorithm/: grid_maze_generator.cpp
src/algorithm/maze_generator/: base_maze_generator.cpp  block_maze_generator.cpp  depth_first_search_maze_generator.cpp
src/data_structure/: grid.cpp
src/graph/: grid.cpp  maze_generator.cpp
src/renderer/: grid_renderer.cpp  renderer.cpp
src/utility/: cmd_options.cpp  terminal.cpp
tasks/: Arguments.md  Maze generator.md  Pathfinder.md  Program.md  TUI.md
tasks/.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  workspace.json
tasks/.obsidian/snippets/: meta.css
tasks/templates/: Links.md  Universal Template.md
tasks/templates/Code/: code bash.md  code php.md  code.md
tasks/templates/Markdown/: link.md  strikestrough.md
(+3 files in other folders)
